update capi text
- fix typos
- remove excessive blank lines
- resize capi question windows

--- a/1 - Data Entry/CAPI Census/Household/Household.ent.qsf
+++ b/1 - Data Entry/CAPI Census/Household/Household.ent.qsf
@@ -30,15 +30,13 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <table style="font-weight:bold;"><tbody><tr><td>~~capi_province_name~~</td><td>~~capi_district_name~~<br></td><td>~~capi_ea_name~~</td><td>~~capi_household_name~~</td></tr></tbody></table>
-            <p><br></p><p>Hello, my name is ~~capi_staff_name~~. I am working with Popstan Statistics and we are conducting the Popstan Census.</p><p><br></p>
+            <table style="font-weight:bold;"><tbody><tr><td>~~capi_province_name~~</td><td>~~capi_district_name~~<br></td><td>~~capi_ea_name~~</td><td>~~capi_household_name~~</td></tr></tbody></table><p>Hello, my name is ~~capi_staff_name~~. I am working with Popstan Statistics and we are conducting the Popstan Census.</p>
             <p>All the answers you give will be confidential and will not be shared with anyone other than members of the technical team for the Popstan Census. Taking part in the census is the responsibility of every citizen and we will be glad if you agree to answer the questions.</p>
   - name: PSC_HOUSEHOLD_DICT.HH_GPS_READING
     conditions:
       - questionText:
           EN: |
-            <p>~~capi_gps_reading~~</p>
-            <p><br></p><table><tbody><tr><td>GPS data:<br></td><td><b>~~capi_gps_data_status~~</b></td></tr><tr><td>~~capi_gps_accuracy_status_label~~</td><td><b>~~capi_gps_accuracy_status~~</b><br></td></tr></tbody></table>
+            <p>~~capi_gps_reading~~</p><table><tbody><tr><td>GPS data:<br></td><td><b>~~capi_gps_data_status~~</b></td></tr><tr><td>~~capi_gps_accuracy_status_label~~</td><td><b>~~capi_gps_accuracy_status~~</b><br></td></tr></tbody></table>
         helpText:
           EN: |
             
@@ -64,9 +62,9 @@ questions:
       - logic: curocc() = 1
         questionText:
           EN: |
-            <p>Can you please give the names of the persons who usually live in this household and visitors of the household who stayed here last night, starting with the head of the household.</p><p><br></p>
+            <p>Can you please give the names of the persons who usually live in this household and visitors of the household who stayed here last night, starting with the head of the household.</p>
             
-            <p>Who is the head of household?</p><p><br></p>
+            <p>Who is the head of household?</p>
             
             <p><span class="instruction">Enter first name then last name.</span></p>
         helpText:
@@ -84,7 +82,7 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>What is ~~HH_NAME~~'s relationship to the head of the household, ~~CapiHeadName()~~?</p><p><br></p>
+            <p>What is ~~HH_NAME~~'s relationship to the head of the household, ~~CapiHeadName()~~?</p>
             
             <p><span class="instruction">Refer the relationship of any member of the household to the HEAD of that household.</span></p>
         helpText:
@@ -94,7 +92,7 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>Is ~~HH_NAME~~ male or female?</p><p><br></p>
+            <p>Is ~~HH_NAME~~ male or female?</p>
             
             <p><span class="instruction">Be careful to get the sex of young children right - ask, do not guess. Always confirm or verify the sex of a person against their name.</span></p>
         helpText:
@@ -105,11 +103,9 @@ questions:
       - questionText:
           EN: |
             <p></p><p>You have listed ~~capi_number_of_persons~~ person(s):</p>
-            <p><br></p>
             
-            <p>~~~capi_household_name_sex~~~</p><p><br></p><p>
+            <p>~~~capi_household_name_sex~~~</p><p>
             </p><p>Is there anyone else in this household?</p>
-            <p><br></p>
             <p>Any (other) children? Relatives? Anyone not related to you? Or any visitors who spent the night?</p>
         helpText:
           EN: |
@@ -126,7 +122,7 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>In what year was ~~HH_NAME~~ born?</p><p><br></p>
+            <p>In what year was ~~HH_NAME~~ born?</p>
             
             <p><span class="instruction">If year is not known enter 9999.</span></p>
         helpText:
@@ -136,9 +132,9 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>How old was ~~HH_NAME~~ at ~~CapiPopulationHisHer()~~ last birthday?</p><p><br></p>
+            <p>How old was ~~HH_NAME~~ at ~~CapiPopulationHisHer()~~ last birthday?</p>
             
-            <p><span class="instruction">Ask and record the age of each household member in completed years (0 for children less than one year old).</span></p><p><br></p><span class="instruction">
+            <p><span class="instruction">Ask and record the age of each household member in completed years (0 for children less than one year old).</span></p><span class="instruction">
             
             </span><p><span class="instruction">If age is not known enter 999.</span></p>
         helpText:
@@ -197,7 +193,6 @@ questions:
       - questionText:
           EN: |
             <p>How old was ~~HH_NAME~~ when ~~CapiPopulationHeShe()~~ first got married?</p>
-            <p><br></p>
             <p><span class="instruction">If age at first marriage is not known enter 999.</span></p>
         helpText:
           EN: |
