--- a/1 - Data Entry/CAPI Census/Menu/Menu.ent.qsf
+++ b/1 - Data Entry/CAPI Census/Menu/Menu.ent.qsf
@@ -40,8 +40,7 @@ questions:
         questionText:
           EN: |
             <p>You are logged in as <b>~~capi_staff_name~~</b>.</p>
-            <p><br></p>
-            <p>Please enter your pin code.</p>
+            <p>Please enter your pin code.</p><p><font color="#0000ff">For demonstration purposes use pin code 1234.</font></p>
         helpText:
           EN: |
             
@@ -60,7 +59,7 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>Please enter supervisor password you received from headquarters.</p><p><br></p>
+            <p>Please enter supervisor password you received from headquarters.</p>
             <p><span class="instruction">For demonstration purposes use password 1234.</span></p>
         helpText:
           EN: |
@@ -77,7 +76,7 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>Please create your pin code.</p><p><br></p>
+            <p>Please create your pin code.</p>
             <p>A pin code is a four digit number that enables you to log into the Popstan Census data collection application. It is recommended to choose a number which you can easily remember and the code should be kept secret.</p>
         helpText:
           EN: |
@@ -87,7 +86,6 @@ questions:
       - questionText:
           EN: |
             <p>You are logged in as ~~capi_staff_role~~ <span style="font-weight:bold;">~~capi_staff_name~~</span>.</p>
-            <p><br></p>
             <p>Select the area you want to work in now.</p>
         helpText:
           EN: |
@@ -113,9 +111,7 @@ questions:
       - questionText:
           EN: |
             <p>You are logged in as Supervisor <b>~~capi_staff_name~~</b>. You are working in <b>~~capi_province_name~~</b> province / <b>~~capi_district_name~~</b> district.</p>
-            <p><br></p>
             <p><b>EA Status: ~~capi_ea_assigned_count~~</b> assigned EAs.</p>
-            <p><br></p>
             <p>Select applicable option.</p>
         helpText:
           EN: |
@@ -125,9 +121,7 @@ questions:
       - questionText:
           EN: |
             <p>You are logged in as Interviewer <b>~~capi_staff_name~~</b>. You are working in <b>~~capi_province_name~~</b> province / <b>~~capi_district_name~~</b> district / <b>~~capi_ea_name~~</b>.</p>
-            <p><br></p>
             <p><b>Household Status: ~~capi_household_complete_count~~</b> completed households. <b>~~capi_household_partial_count~~</b> partially completed households.</p>
-            <p><br></p>
             <p>Select applicable option.</p>
         helpText:
           EN: |
@@ -152,7 +146,7 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>You are managing information about <b>~~capi_manage_staff_name~~</b></p>
+            <p>You are managing information about <b>~~capi_manage_staff_name~~</b>.</p>
             <p>Select applicable option.</p>
         helpText:
           EN: |
@@ -162,7 +156,7 @@ questions:
       - logic: MANAGE_STAFF_NAME <> ""
         questionText:
           EN: |
-            <p>Edit the name of <b>~~capi_manage_staff_name~~</b></p>
+            <p>Edit the name of <b>~~capi_manage_staff_name~~</b>.</p>
         helpText:
           EN: |
             
@@ -185,7 +179,7 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>Select EA to assign to <b>~~capi_manage_staff_name~~</b></p>
+            <p>Select EA to assign to <b>~~capi_manage_staff_name~~</b>.</p>
         helpText:
           EN: |
             
