modified Simple CAPI to use the renamed action CSPro.Logic.evalAsync (from runLogicAsync)

--- a/1 - Data Entry/Simple CAPI/Simple CAPI.ent.qsf
+++ b/1 - Data Entry/Simple CAPI/Simple CAPI.ent.qsf
@@ -49,7 +49,7 @@ questions:
             <script>
               function endRoster() {
                 let CS = new CSProActionInvoker();
-                CS.Logic.runLogicAsync({ logic: "EndPersonRoster();" });
+                CS.Logic.evalAsync({ logic: "EndPersonRoster();" });
               }
             </script>
         helpText:
