--- a/1 - Data Entry/Simple CAPI/Simple CAPI.ent.qsf
+++ b/1 - Data Entry/Simple CAPI/Simple CAPI.ent.qsf
@@ -1,6 +1,6 @@
 ﻿---
 fileType: Question Text
-version: CSPro 7.7
+version: CSPro 8.0
 languages:
   - name: EN
     label: English
@@ -48,7 +48,7 @@ questions:
             <script src="/action-invoker.js"></script>
             <script>
               function endRoster() {
-                let CS = new CSProActionInvoker();
+                let CS = new CSProActionInvoker("SimpleCapiAccessToken");
                 CS.Logic.evalAsync({ logic: "EndPersonRoster();" });
               }
             </script>
