updated the examples for 8.0 features including: the case of objects/functions, HTML dialog access tokens, recode with -> syntax

--- a/1 - Data Entry/Geometry/Geometry.ent.qsf
+++ b/1 - Data Entry/Geometry/Geometry.ent.qsf
@@ -1,6 +1,6 @@
 ﻿---
 fileType: Question Text
-version: CSPro 7.7
+version: CSPro 8.0
 languages:
   - name: EN
     label: English
@@ -30,5 +30,5 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>Use the map and polygon objects to trace, view, and calculate the area and perimter of a polygon.</p><ul><li><b>Trace polygon:&nbsp;</b>Trace and save the polygon as a GeoJSON file</li><li><b>View&nbsp;</b><b>polygon</b><b>:</b> Select and view a polygon</li><li><b>Calculate:</b> Select and calculate the area and perimeter of a polygon</li></ul>
+            <p>Use the map and polygon objects to trace, view, and calculate the area and perimeter of a polygon.</p><ul><li><b>Trace polygon:&nbsp;</b>Trace and save the polygon as a GeoJSON file</li><li><b>View&nbsp;</b><b>polygon</b><b>:</b> Select and view a polygon</li><li><b>Calculate:</b> Select and calculate the area and perimeter of a polygon</li></ul>
 ...
