--- a/1 - Data Entry/HTML Dialog/HTML-Dialog.ent.qsf
+++ b/1 - Data Entry/HTML Dialog/HTML-Dialog.ent.qsf
@@ -1,6 +1,6 @@
 ﻿---
 fileType: Question Text
-version: CSPro 7.7
+version: CSPro 8.0
 languages:
   - name: EN
     label: English
@@ -30,5 +30,5 @@ questions:
     conditions:
       - questionText:
           EN: |
-            <p>Use the function htmlDialog to create custom HTML dialogs.</p><p></p><ul><li><b>Basic input: </b>&nbsp;Display user-entered text from prompt</li><li><b>Basic output: </b>Enter text directly into custom dialog and display text with an error message</li></ul><p></p>
+            <p>Use the function CS.UI.showDialog to create custom HTML dialogs.</p><p></p><ul><li><b>Basic input: </b>&nbsp;Display user-entered text from prompt</li><li><b>Basic output: </b>Enter text directly into custom dialog and display text with an error message</li></ul><p></p>
 ...
